--- a/index.html
+++ b/index.html
@@ -190,6 +190,44 @@
 </header>
 
 
+
+<section class="hero">
+    <div class="hero-content">
+        <div class="hero-text-wrap">
+            <div class="hero-text">
+                <h1 class="hero-title">Built for developers</h1>
+                <p class="hero-description">GitHub is a development platform inspired by the way you work. From <a href="#">open source</a> to
+                    <a href="#">business</a>, you can host and review code, manage projects, and build software alongside 50 million developers.</p>
+            </div>
+        </div>
+
+        <div class="hero-form">
+                <div class="sign-up-form">
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" id="username">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" id="password">
+                    </div>
+                    <p class="form-description">Make sure it's at least 15 characters OR at least 8 characters including a number and a lowercase letter.
+                        <a href="#">Learn more.</a>
+                    </p>
+                    <a href="#" class="btn-sign-up">Sign up for Github</a>
+                    <p class="footer-description">By clicking “Sign up for GitHub”, you agree to our <a href="#">Terms of Service</a> and
+                        <a href="#">Privacy Statement</a>. We’ll occasionally send you account related emails.
+                    </p>
+                </div>
+        </div>
+    </div>
+</section>
+
+
 <script src="assets/js/main.js"></script>
 </body>
 </html>
