Github for teams section completed.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="container">
     <nav>
         <div class="nav-logo">
-            <i class="fab fa-github"></i>
+            <a href="#"><i class="fab fa-github"></i></a>
         </div>
         <div class="nav-main-menu">
             <ul class="nav-main-links">
@@ -251,6 +251,25 @@
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="github-for-teams">
+        <div class="container">
+            <div class="for-teams-content">
+                <div class="warning">
+                    <div class="new-warning">NEW</div>
+                </div>
+                <div class="description">
+                    <h2>GitHub is now free for teams</h2>
+                    <p>GitHub Free gives teams private repositories with unlimited collaborators at no cost. GitHub Team is now reduced to $4 per user/month.                </p>
+                </div>
+                <div class="try-github-free">
+                    <a href="#" class="btn-try-github-free">Try Github Free</a>
+                </div>
+
             </div>
         </div>
     </section>
