Organizations section completed.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="hero-content">
                 <div class="hero-text-wrap">
                     <div class="hero-text">
-                        <h1 class="hero-title">Built for developers</h1>
+                        <h1 class="hero-title ff-inter">Built for developers</h1>
                         <p class="hero-description">GitHub is a development platform inspired by the way you work. From <a href="#">open source</a> to
                             <a href="#">business</a>, you can host and review code, manage projects, and build software alongside 50 million developers.</p>
                     </div>
@@ -233,12 +233,12 @@
             <div class="enterprise-content">
                 <img src="https://github.githubassets.com/images/modules/site/home/space.svg" class="enterprise-head-img" alt="">
                 <div class="enterprise-title">
-                    <h2>Get started with GitHub Enterprise</h2>
+                    <h2 class="ff-inter">Get started with GitHub Enterprise</h2>
                     <p>Take collaboration to the next level with security and administrative features built for teams.</p>
                 </div>
                 <div class="enterprise-item">
                     <img src="https://github.githubassets.com/images/modules/orgs/enterprise.svg" alt="">
-                    <h3>Enterprise</h3>
+                    <h3 class="ff-inter">Enterprise</h3>
                     <p>Deploy to your environment or the cloud.</p>
                     <a href="#" class="btn btn-free-trial">Start a free trial</a>
                 </div>
@@ -267,12 +267,60 @@
                     <p>GitHub Free gives teams private repositories with unlimited collaborators at no cost. GitHub Team is now reduced to $4 per user/month.                </p>
                 </div>
                 <div class="try-github-free">
-                    <a href="#" class="btn-try-github-free">Try Github Free</a>
+                    <a href="#" class="btn-try-github-free ff-inter">Try Github Free</a>
                 </div>
 
             </div>
         </div>
     </section>
+
+    <section class="organizations">
+        <div class="container">
+            <div class="organizations-content">
+                <h3 class="organizations-title ff-inter">More than 2.9 million businesses and organizations use GitHub</h3>
+                <ul class="organizations-list">
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/airbnb-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/sap-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/ibm-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/google-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/paypal-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/bloomberg-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/spotify-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/swift-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/facebook-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/node-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/nasa-logo.png" class="organization-logo" alt="">
+                    </li>
+                    <li class="organization-item">
+                        <img src="https://github.githubassets.com/images/modules/site/logos/walmart-logo.png" class="organization-logo" alt="">
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
 
 
 </main>
