Github team sign up section completed.

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <img src="https://github.githubassets.com/images/modules/site/icons/support.svg" alt="">
                     <h3>Talk to us</h3>
                     <p>Need help?</p>
-                    <a href="#" class="btn btn-contact-sales">
+                    <a href="#" class="btn-outline-blue btn btn-contact-sales">
                         <span>Contact Sales</span>
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </a>
@@ -321,7 +321,20 @@
     </section>
 
 
-
+    <section class="github-teams-signup">
+        <div class="container">
+            <div class="teams-content">
+                <p class="sm-description">GitHub for teams  </p>
+                <h1 class="title ff-inter">A better way to work together</h1>
+                <p class="description ff-inter">GitHub brings teams together to work through problems, move ideas forward, and learn from each other along the way.</p>
+               <div class="btn-wrap">
+                   <a class="btn-outline-blue btn-teams-sign-up">
+                       Sign up your team  <i class="fas fa-long-arrow-alt-right"></i>
+                   </a>
+               </div>
+            </div>
+        </div>
+    </section>
 
 </main>
 
