Features section completed.

--- a/index.html
+++ b/index.html
@@ -336,6 +336,53 @@
         </div>
     </section>
 
+    <section class="features">
+        <div class="container">
+            <div class="features-content">
+                <div class="features-head-img">
+                    <img src="https://github.githubassets.com/images/modules/site/home/team.svg" alt="">
+                    <div class="features-item-img">
+                        <img src="https://github.githubassets.com/images/modules/site/home/team-code.svg" alt="" class="active">
+                        <img src="https://github.githubassets.com/images/modules/site/home/team-chaos.svg" alt="" >
+                        <img src="https://github.githubassets.com/images/modules/site/home/team-tools.svg" alt="">
+                    </div>
+                </div>
+                <div class="features-list">
+                        <div class="features-item" data-id="0">
+                                <div class="text">
+                                    <h3 class="features-item-title ff-inter">Write better code</h3>
+                                    <p class="features-item-description">Collaboration makes perfect. The conversations and code reviews that happen in pull requests help your team share the weight of your work and improve the software you build.
+                                        <a href="#">Learn about code review.</a></p>
+                                </div>
+                                <div class="arrow-right-icon">
+                                    <i class="fas fa-caret-right"></i>
+                                </div>
+                        </div>
+                        <div class="features-item" data-id="1">
+                            <div class="text">
+                                <h3 class="features-item-title ff-inter">Manage your chaos</h3>
+                                <p class="features-item-description">Take a deep breath. On GitHub, project management happens in issues and project boards, right alongside your code. All you have to do is mention a teammate to get them involved.
+                                    <a href="#">Learn about project management.</a></p>
+                            </div>
+                            <div class="arrow-right-icon">
+                                <i class="fas fa-caret-right"></i>
+                            </div>
+                        </div>
+                        <div class="features-item" data-id="2">
+                            <div class="text">
+                                <h3 class="features-item-title ff-inter">Find the right tools</h3>
+                                <p class="features-item-description">Browse and buy apps from GitHub Marketplace with your GitHub account. Find the tools you like or discover new favorites—then start using them in minutes.
+                                    <a href="#">Learn about integrations.</a></p>
+                            </div>
+                            <div class="arrow-right-icon">
+                                <i class="fas fa-caret-right"></i>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </main>
 
 
