Leading companies section completed.

--- a/index.html
+++ b/index.html
@@ -383,6 +383,89 @@
         </div>
     </section>
 
+    <section class="leading-companies">
+        <div class="container">
+            <h3 class="section-title ff-inter">See how the world's leading companies use GitHub Enterprise.</h3>
+            <div class="companines">
+                <a href="#" class="companies-item">
+                    <div class="company-header">
+                        <div class="company-link-effect">
+                            <div class="square">
+                                <i class="fas fa-long-arrow-alt-up"></i>
+                            </div>
+                        </div>
+                        <img src="https://customer-stories-feed.github.com/customer_stories/mgm-resorts/hero.jpg" alt="">
+                    </div>
+                    <div class="company-body">
+                        <h1>MGM Resorts International</h1>
+                        <span>Hospitality</span>
+                    </div>
+                    <div class="company-footer">
+                        <span>Read More</span>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </a>
+
+                <a href="#" class="companies-item">
+                    <div class="company-header">
+                        <div class="company-link-effect">
+                            <div class="square">
+                                <i class="fas fa-long-arrow-alt-up"></i>
+                            </div>
+                        </div>
+                        <img src="https://customer-stories-feed.github.com/customer_stories/nationwide/nw_hero.jpg" alt="">
+                    </div>
+                    <div class="company-body">
+                        <h1>Nationwide</h1>
+                        <span>Insurance</span>
+                    </div>
+                    <div class="company-footer">
+                        <span>Read More</span>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </a>
+
+                <a href="#" class="companies-item">
+                    <div class="company-header">
+                        <div class="company-link-effect">
+                            <div class="square">
+                                <i class="fas fa-long-arrow-alt-up"></i>
+                            </div>
+                        </div>
+                        <img src="https://customer-stories-feed.github.com/customer_stories/sap/sap6.jpg" alt="">
+                    </div>
+                    <div class="company-body">
+                        <h1>SAP</h1>
+                        <span>Business Software</span>
+                    </div>
+                    <div class="company-footer">
+                        <span>Read More</span>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </a>
+
+                <a href="#" class="companies-item">
+                    <div class="company-header">
+                        <div class="company-link-effect">
+                            <div class="square">
+                                <i class="fas fa-long-arrow-alt-up"></i>
+                            </div>
+                        </div>
+                        <img src="https://customer-stories-feed.github.com/customer_stories/spotify/spotifyhero.jpg" alt="">
+                    </div>
+                    <div class="company-body">
+                        <h1 class="ff-inter">Spotify</h1>
+                        <span>Technology / Streaming</span>
+                    </div>
+                    <div class="company-footer">
+                        <span>Read More</span>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
 </main>
 
 
