Administrations section completed.

--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
     <section class="github-teams-signup">
         <div class="container">
             <div class="teams-content">
-                <p class="sm-description">GitHub for teams  </p>
-                <h1 class="title ff-inter">A better way to work together</h1>
-                <p class="description ff-inter">GitHub brings teams together to work through problems, move ideas forward, and learn from each other along the way.</p>
+                <p class="section-sm-description">GitHub for teams  </p>
+                <h1 class="section-title ff-inter">A better way to work together</h1>
+                <p class="section-description ff-inter">GitHub brings teams together to work through problems, move ideas forward, and learn from each other along the way.</p>
                <div class="btn-wrap">
                    <a class="btn-outline-blue btn-teams-sign-up">
                        Sign up your team  <i class="fas fa-long-arrow-alt-right"></i>
@@ -462,6 +462,58 @@
                         <i class="fas fa-long-arrow-alt-right"></i>
                     </div>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="administration">
+        <div class="container">
+            <div class="administration-content">
+                <div class="administration-header">
+                    <p class="section-sm-description ff-mono">Security and administration
+                    </p>
+                    <h1 class="section-title ff-inter">Your business needs, met
+
+                    </h1>
+                    <p class="section-description ff-inter">From flexible hosting to granular access controls, we’ve got your security requirements covered.
+                    </p>
+                    <div class="btn-wrap">
+                        <a class="btn-outline-blue btn-teams-sign-up">
+                            Learn how GitHub Enterprise works    <i class="fas fa-long-arrow-alt-right"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="administration-body">
+                    <div class="administration-items">
+                        <div class="administration-item">
+                            <h3 class="administration-title ff-inter">Code security</h3>
+                            <p class="administration-desc">Prevent problems before they happen. Protected branches, signed commits, and required status checks protect your work and help you maintain a high standard for your code.</p>
+                        </div>
+                        <div class="administration-item">
+                            <h3 class="administration-title ff-inter">Access controlled</h3>
+                            <p class="administration-desc">Encourage teams to work together while limiting access to those who need it with granular permissions and authentication through SAML/SSO and LDAP.</p>
+                        </div>
+                    </div>
+                    <div class="administration-body-img">
+                        <img src="https://github.githubassets.com/images/modules/site/home/business.png" alt="">
+                    </div>
+                </div>
+                <div class="administration-footer">
+                    <div class="administration-card">
+                        <div class="administration-card-icon">
+                            <i class="fas fa-server"></i>
+                        </div>
+                        <div class="administration-card-desc">
+                            <h3 class="ff-inter">Hosted where you need it</h3>
+                            <p>Securely and reliably host your work on GitHub using GitHub Enterprise Cloud. Or deploy GitHub Enterprise Server in your own data centers or in a private cloud using Amazon Web Services, Azure, or Google Cloud Platform.</p>
+                            <a href="#">Compare plans <i class="fas fa-long-arrow-alt-right"></i></a>
+                            <a href="#">Contact Sales for more information <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </div>
+
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </section>
